--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
     --main-color: #ffd93e;
 }
 
-html body {
+html, body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -51,6 +51,10 @@ html body {
     position: relative;
     left: 30px;
     top: 26px;
+}
+
+#burger {
+    display: none;
 }
 
 .header-menu {
