--- a/small.css
+++ b/small.css
@@ -1,4 +1,9 @@
 @media screen and (max-width: 480px) {
+
+    :root {
+        --main-color: #ffd93e;
+    }
+
     .header {
         height: 100%;
         position: relative;
@@ -34,6 +39,10 @@
     }
 
 /* -------------------------  MAIN  ------------------------------*/
+
+    .scroll-arrows {
+        display: none;
+    }
 
     .main {
         display: block;
@@ -84,16 +93,22 @@
 
     /* ------------------------  MAIN-CONTROLS  -------------------- */
 
+    .main-controls > p {
+        padding: 0;
+    }
+
     .items {
         display: inline-block;
         white-space: nowrap;
         height: 100%;
         width: 100%;
         overflow-x: hidden;
-        padding: 10px 0;
+        padding: 5px 0;
     }
 
     .item {
+        margin: 0;
+        padding: 0;
         display: inline-block;
         white-space: normal;
     }
@@ -102,6 +117,74 @@
 
     .favorites {
         width: 95%;
+        margin: 0 auto;
+        padding: 5px;
     }
 
+    .favorites > p > span {
+        display: inline-block;
+        margin: 0;
+        padding: 5px 10px;
+        margin-left: 80px;
+        border-radius: 13px;
+        background-color: var(--main-color);
+    }
+
+    .favorites > p > span > img {
+        margin-left: 10px;
+    }
+
+    .favorites > ul > li {
+        display: none;
+    }
+
+    .favorites-list-items {
+        clear: both;
+        display: block;
+        margin: 0 10px;
+        padding: 5px 10px;
+        border-radius: 13px;
+        background-color: rgba(0, 0, 0, 0.04);
+    }
+
+    .favorites-list-items:first-child {
+        display: none;
+    }
+
+    /* ---------------------------  DEVICE-CARDS  -------------------- */
+
+    .device-cards {
+        margin: 5px auto;
+        padding: 5px 0;
+        width: 95%;
+    }
+
+    .device-card {
+        margin: 0;
+
+    }
+
+    .device-card:first-child {
+        margin: 0;
+    }
+
+    /* ---------------------------  FOOTER  -------------------- */
+
+    .footer {
+        clear: both;
+        height: 40px;
+        font-size: 12px;
+    }
+
+    .footer > ul {
+        margin: auto;
+    }
+
+    .footer > ul > li {
+        display: inline;
+        color: rgba(0, 0, 0, 0.6);
+        margin-right: 30px;
+        line-height: 40px;
+    }
 }
+
